# zeroclaw

./: CLAUDE.md  COMPLETED_WORK.md  CONNECT.md  CONTRIBUTING.md  Cargo.toml  DEPRECATED.md  DX.md  GOALS.md  HELP.md  LOCAL.md  MERGE.md  N8N.md  ONBOARD.md  PROVIDERS.md  README.ar.md  README.bn.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.fi.md  README.fr.md  README.he.md  README.hi.md  README.hu.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nb.md  README.nl.md  README.pl.md  README.pt.md  README.ro.md  README.ru.md  README.sv.md  README.th.md  README.tl.md  (+14 more)
.cargo/: config.toml
.gemini/: style-guide.md
.github/: pull_request_template.md
.github/workflows/: master-branch-flow.md
.kiro/steering/: dx.md
any/cli-anything-plugin/: HARNESS.md
benches/: agent_benchmarks.rs
crates/robot-kit/: PI5_SETUP.md  README.md
cursed/: CLAUDE_OPUS_PROMPT.md  COMPLETE.md  CONNECTS_COMPLETE.md  CONNECT_MD_ANALYSIS.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  METASEARCH_INTEGRATION_COMPLETE.md  METASEARCH_READY.md  METASEARCH_TESTING_GUIDE.md  OPENAPI_COMPLETE.md  OPENAPI_STATUS.md  PROVIDER_EXPANSION_COMPLETE.md  TASK5_TOKEN_INTEGRATION.md  TEST_METASEARCH_COMMAND.md  TODO.md  UI.md  UI_AUDIT_REPORT.md  UI_INTEGRATION_PLAN.md  UI_MIGRATION_COMPLETE.md  WHATSAPP_QR_PAIRING_ANALYSIS.md  ZEROCLAW_DETAILS.md
cursed/animations/: sounds.rs  video.rs
cursed/any/: registry.json
cursed/metasearch/: INTEGRATION_GUIDE.md
cursed/metasearch/crates/metasearch-core/: Cargo.toml
cursed/onboard/: README.md  THEMING.md
cursed/serializer/: Cargo.toml
cursed/trash/: calendar.rs  code_snippet.rs  color_picker.rs  color_picker_advanced.rs  credit_card.rs  date_picker.rs  file_browser.rs  kanban.rs  list.rs  markdown_editor.rs  table_editor.rs  time_picker.rs
dev/: README.md
docs/: LOCAL_GGUF.md  README.ar.md  README.bn.md  README.cs.md  README.da.md  README.de.md  README.el.md  README.es.md  README.fi.md  README.fr.md  README.he.md  README.hi.md  README.hu.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nb.md  README.nl.md  README.pl.md  README.pt.md  README.ro.md  README.ru.md  README.sv.md  README.th.md  README.tl.md  README.tr.md  README.uk.md  README.ur.md  README.vi.md  README.zh-CN.md  REBRANDING.md  SERIALIZER.md  SERIALIZER_INTEGRATION.md  SUMMARY.ar.md  SUMMARY.bn.md  SUMMARY.cs.md  SUMMARY.da.md  SUMMARY.de.md  (+26 more)
docs/assets/: architecture-diagrams.md
docs/contributing/: actions-source-policy.md  adding-boards-and-tools.md  cargo-slicer-speedup.md  change-playbooks.md  cla.md  custom-providers.md  extension-examples.md  langgraph-integration.md  pr-discipline.md  pr-workflow.md  release-process.md  reviewer-playbook.md  testing-telegram.md  testing.md
docs/hardware/: README.md  android-setup.md  arduino-uno-q-setup.md  hardware-peripherals-design.md  nucleo-setup.md
docs/i18n/: README.md
docs/maintainers/: docs-inventory.md  i18n-coverage.md  project-triage-snapshot-2026-02-18.md  refactor-candidates.md  repo-map.md  structure-README.md  trademark.md
docs/ops/: README.md  network-deployment.md  operations-runbook.md  proxy-agent-playbook.md  resource-limits.md  troubleshooting.md
docs/security/: agnostic-security.md  audit-logging.md  frictionless-security.md  matrix-e2ee-guide.md  sandboxing.md  security-roadmap.md
docs/setup-guides/: README.md  README.vi.md  macos-update-uninstall.md  mattermost-setup.md  nextcloud-talk-setup.md  one-click-bootstrap.md  zai-glm-setup.md
docs/vi/: README.md  actions-source-policy.md  adding-boards-and-tools.md  agnostic-security.md  arduino-uno-q-setup.md  audit-logging.md  channels-reference.md  commands-reference.md  config-reference.md  custom-providers.md  frictionless-security.md  hardware-peripherals-design.md  langgraph-integration.md  matrix-e2ee-guide.md  mattermost-setup.md  network-deployment.md  nucleo-setup.md  one-click-bootstrap.md  operations-runbook.md  pr-workflow.md  providers-reference.md  proxy-agent-playbook.md  release-process.md  resource-limits.md  reviewer-playbook.md  sandboxing.md  security-roadmap.md  troubleshooting.md  zai-glm-setup.md
examples/: test_metasearch.rs
firmware/esp32/: README.md  SETUP.md
firmware/esp32-ui/: README.md
hexed/: CHANGES_SUMMARY.md
hexed/onboard/: EXAMPLES.md  PROMPTS.md
metasearch/: README.md
metasearch/crates/metasearch-engine/: Cargo.toml
onboard/: Cargo.toml  THEME_SYSTEM.md  theme.toml
onboard/src/: effects.rs  lib.rs  main.rs  splash.rs
onboard/src/animations/: ascii_art.rs  confetti.rs  images.rs  mod.rs  visualizer.rs
onboard/src/prompts/: autocomplete.rs  confirm.rs  email.rs  input.rs  mod.rs  multiselect.rs  password.rs  progress.rs  select.rs  tags.rs  theme.rs  toggle.rs  wizard.rs
onboard/src/prompts/trash/: emoji_picker.rs  json_editor.rs
python/: README.md  README.vi.md
scripts/: verify_metasearch.sh
serializer/: README.md
serializer/docs/: TUI.md
src/: i18n.rs  identity.rs  lib.rs  main.rs  multimodal.rs  theme.rs  util.rs
src/agent/: agent.rs  loop_.rs  (+6 more)
tests/: test_metasearch.rs
(+552 files in other folders)
