# ──────────────────────────────────────────────
#  Package
# ──────────────────────────────────────────────

[package]
name = "onboard"
version = "0.1.0"
edition = "2024"
default-run = "onboard"

# ──────────────────────────────────────────────
#  Binaries
# ──────────────────────────────────────────────

[[bin]]
name = "onboard"
path = "src/main.rs"

# ──────────────────────────────────────────────
#  Library
# ──────────────────────────────────────────────

[lib]
name = "onboard"
path = "src/lib.rs"

# [[bin]]
# name = "tui"
# path = "src/tui.rs"

# [[bin]]
# name = "local"
# path = "src/local.rs"

# ──────────────────────────────────────────────
#  Dependencies
# ──────────────────────────────────────────────

[dependencies]

# Terminal UI
console = "0.15"
owo-colors = { version = "4.0", features = ["supports-colors"] }
terminal_size = "0.4.3"

# Text wrapping
textwrap = "0.16"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1.42", features = ["rt-multi-thread"] }

# Password hashing
argon2 = "0.5"

# Security
zeroize = { version = "1.8", features = ["derive"] }

# Random number generation
rand = "0.8"

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
ctrlc = "3.4"
toml = "1.0.7"

# ──────────────────────────────────────────────
#  Platform-specific Dependencies
# ──────────────────────────────────────────────

[target.'cfg(unix)'.dependencies]
# libc = "0.2"

[target.'cfg(windows)'.dependencies]
# libc = "0.2"
# winapi = { version = "0.3", features = [                                         # ← merged from llm
#     "winbase",
#     "fileapi",
#     "handleapi",
#     "winnt",
#     "processenv",
# ] }

# ──────────────────────────────────────────────
#  Features
# ──────────────────────────────────────────────

[features]
default = []

# ──────────────────────────────────────────────
#  Dev / Build Dependencies
# ──────────────────────────────────────────────

[dev-dependencies]
# httpmock = "0.7"

# ──────────────────────────────────────────────
#  Profiles (merged from llm)
# ──────────────────────────────────────────────

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
