[package]
name = "metasearch-engine"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Search engine implementations translated from SearXNG Python to Rust"

[features]
default = []
# Enable SQLite database engine (requires rusqlite)
sqlite = ["rusqlite", "tokio/rt"]
# Enable PostgreSQL database engine (requires tokio-postgres)
postgres = ["tokio-postgres"]
# Enable MySQL/MariaDB database engine (requires mysql_async)
mysql = ["mysql_async"]
# Enable MongoDB database engine (requires mongodb)
mongodb_feature = ["mongodb", "futures"]
# Enable Valkey/Redis database engine (requires redis)
redis = ["dep:redis"]
# Enable all database engines
databases = ["sqlite", "postgres", "mysql", "mongodb_feature", "redis"]

[dependencies]
metasearch-core = { path = "../metasearch-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate", "http2", "hickory-dns"] }
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tracing = "0.1"
url = "2.5"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
html-escape = "0.2"
base64 = "0.22"
rand = "0.8"

# Performance optimizations
dashmap = "6.1"
smallvec = { version = "1.13", features = ["union", "const_generics", "serde"] }

# Zero-copy strings
# (std::borrow::Cow is in stdlib — no extra dep needed)

# Optional database dependencies
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
tokio-postgres = { version = "0.7", optional = true }
mysql_async = { version = "0.34", optional = true }
mongodb = { version = "3.1", optional = true }
redis = { version = "0.27", features = ["tokio-comp"], optional = true }
futures = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }
