[package]
name = "metasearch-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
description = "Core types, traits, and utilities for the metasearch engine"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2.0"
async-trait = "0.1"
tracing = "0.1"

# Performance optimizations
dashmap = "6.1"
rayon = "1.10"
smallvec = { version = "1.13", features = ["union", "const_generics", "serde"] }
compact_str = { version = "0.8", features = ["serde"] }
ahash = "0.8"
